<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">可视化布局器</string>
    <string name="title_designer">布局编辑器</string>
    <string name="title_home">欢迎</string>
    <string name="welcome_subtitle">基于 Material Design 3 的 Android 布局可视化编辑器</string>
    <string name="action_new">新建项目</string>
    <string name="action_open">打开示例</string>
    <string name="action_about">关于</string>
    <string name="tab_widgets">控件库</string>
    <string name="tab_canvas">画布</string>
    <string name="tab_attributes">属性</string>
    <string name="tab_code">XML 代码</string>
    <string name="menu_add_view">添加子视图</string>
    <string name="menu_delete">删除选中</string>
    <string name="menu_copy_xml">复制 XML</string>
    <string name="menu_clear">清空画布</string>
    <string name="msg_no_selection">未选中任何视图，请先在画布或控件库选择。</string>
    <string name="msg_selected_root">已选中根节点，无法再上移</string>
    <string name="msg_copied">已复制到剪贴板</string>
    <string name="hint_widget_name">属性值</string>
    <string name="label_category_common">常用</string>
    <string name="label_category_layout">布局</string>
    <string name="label_category_text">文本 &amp; 输入</string>
    <string name="label_category_compound">复合控件</string>
    <string name="empty_canvas_hint">从左侧「控件库」拖拽或点击控件开始设计</string>
    <string name="action_select_parent">选择父视图</string>
    <string name="action_preview">预览布局</string>
    <string name="title_preview">布局预览</string>
</resources>
